perf: add meta tag

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="author" content="Muhammad Fadhil Abyansyah" />
+    <meta name="description" content="Bookshelf Apps adalah aplikasi untuk menyimpan daftar buku yang telah dibaca" />
+    <meta name="keywords" content="bookshelf, book, shelf, apps, bookshelf apps" />
     <title>Bookshelf Apps</title>
     <link rel="stylesheet" href="assets/css/style.css" />
     <link
